[feat] added gameObject and Customers

--- a/InventoryRPG/InventoryRPG.vcxproj
+++ b/InventoryRPG/InventoryRPG.vcxproj
@@ -132,17 +132,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CommandScheduler.cpp" />
+    <ClCompile Include="Customer.cpp" />
+    <ClCompile Include="CustomerData.cpp" />
     <ClCompile Include="Dish.cpp" />
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PrepareDishes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandScheduler.h" />
+    <ClInclude Include="Customer.h" />
+    <ClInclude Include="CustomerData.h" />
     <ClInclude Include="Dish.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="IObserver.h" />
     <ClInclude Include="PrepareDishes.h" />
