--- a/InventoryRPG/InventoryRPG.vcxproj
+++ b/InventoryRPG/InventoryRPG.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="CommandScheduler.cpp" />
     <ClCompile Include="Customer.cpp" />
     <ClCompile Include="CustomerData.cpp" />
@@ -142,6 +143,7 @@
     <ClCompile Include="PrepareDishes.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AssetManager.h" />
     <ClInclude Include="CommandScheduler.h" />
     <ClInclude Include="Customer.h" />
     <ClInclude Include="CustomerData.h" />
